[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/Lobby.gd" type="Script" id=3]
[ext_resource path="res://Stages/Capture/Timer.gd" type="Script" id=4]
[ext_resource path="res://assets/lobby/engineer.jpg" type="Texture" id=5]
[ext_resource path="res://assets/lobby/mage.jpg" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 29
font_data = ExtResource( 1 )

[node name="Lobby" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_top = -0.949982
margin_right = 1022.0
margin_bottom = 598.05
color = Color( 0.352941, 0.364706, 0.435294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -407.0
margin_top = -99.5
margin_right = 407.0
margin_bottom = 259.5
custom_constants/separation = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="HBoxContainer" parent="Background/VBox"]
margin_right = 842.0
margin_bottom = 256.0
custom_constants/separation = 50

[node name="VBox" type="VBoxContainer" parent="Background/VBox/Players"]
margin_right = 396.0
margin_bottom = 256.0
custom_constants/separation = 50

[node name="Player1" type="HBoxContainer" parent="Background/VBox/Players/VBox"]
margin_right = 396.0
margin_bottom = 103.0

[node name="Portrait" type="TextureRect" parent="Background/VBox/Players/VBox/Player1"]
margin_right = 50.0
margin_bottom = 103.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="CharacterName" type="Label" parent="Background/VBox/Players/VBox/Player1"]
margin_left = 54.0
margin_top = 34.0
margin_right = 254.0
margin_bottom = 69.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 1 )
text = "Engineer"
align = 1
valign = 1

[node name="UpButton" type="Button" parent="Background/VBox/Players/VBox/Player1"]
margin_left = 258.0
margin_right = 318.0
margin_bottom = 103.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 2 )
text = "↑"

[node name="DownButton" type="Button" parent="Background/VBox/Players/VBox/Player1"]
margin_left = 322.0
margin_right = 396.0
margin_bottom = 103.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 2 )
text = "X"

[node name="Player2" type="HBoxContainer" parent="Background/VBox/Players/VBox"]
margin_top = 153.0
margin_right = 396.0
margin_bottom = 256.0

[node name="Portrait" type="TextureRect" parent="Background/VBox/Players/VBox/Player2"]
margin_right = 50.0
margin_bottom = 103.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="CharacterName" type="Label" parent="Background/VBox/Players/VBox/Player2"]
margin_left = 54.0
margin_top = 34.0
margin_right = 254.0
margin_bottom = 69.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 1 )
text = "Engineer"
align = 1
valign = 1

[node name="UpButton" type="Button" parent="Background/VBox/Players/VBox/Player2"]
margin_left = 258.0
margin_right = 318.0
margin_bottom = 103.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 2 )
text = "↑"

[node name="DownButton" type="Button" parent="Background/VBox/Players/VBox/Player2"]
margin_left = 322.0
margin_right = 396.0
margin_bottom = 103.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 2 )
text = "X"

[node name="VBox2" type="VBoxContainer" parent="Background/VBox/Players"]
margin_left = 446.0
margin_right = 842.0
margin_bottom = 256.0
custom_constants/separation = 50

[node name="Player3" type="HBoxContainer" parent="Background/VBox/Players/VBox2"]
margin_right = 396.0
margin_bottom = 103.0

[node name="DownButton" type="Button" parent="Background/VBox/Players/VBox2/Player3"]
margin_right = 74.0
margin_bottom = 103.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 2 )
text = "X"

[node name="UpButton" type="Button" parent="Background/VBox/Players/VBox2/Player3"]
margin_left = 78.0
margin_right = 138.0
margin_bottom = 103.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 2 )
text = "↑"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterName" type="Label" parent="Background/VBox/Players/VBox2/Player3"]
margin_left = 142.0
margin_top = 34.0
margin_right = 342.0
margin_bottom = 69.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 1 )
text = "Engineer"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="Background/VBox/Players/VBox2/Player3"]
margin_left = 346.0
margin_right = 396.0
margin_bottom = 103.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="Player4" type="HBoxContainer" parent="Background/VBox/Players/VBox2"]
margin_top = 153.0
margin_right = 396.0
margin_bottom = 256.0

[node name="DownButton" type="Button" parent="Background/VBox/Players/VBox2/Player4"]
margin_right = 74.0
margin_bottom = 103.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 2 )
text = "X"

[node name="UpButton" type="Button" parent="Background/VBox/Players/VBox2/Player4"]
margin_left = 78.0
margin_right = 138.0
margin_bottom = 103.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = ExtResource( 2 )
text = "↑"

[node name="CharacterName" type="Label" parent="Background/VBox/Players/VBox2/Player4"]
margin_left = 142.0
margin_top = 34.0
margin_right = 342.0
margin_bottom = 69.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 1 )
text = "Engineer"
align = 1
valign = 1

[node name="Portrait" type="TextureRect" parent="Background/VBox/Players/VBox2/Player4"]
margin_left = 346.0
margin_right = 396.0
margin_bottom = 103.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="CastVoteButton" type="Button" parent="Background/VBox"]
margin_top = 336.0
margin_right = 842.0
margin_bottom = 379.0
custom_fonts/font = SubResource( 2 )
text = "Cast Votes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Background"]
wait_time = 300.0
one_shot = true
script = ExtResource( 4 )

[node name="Timeboard" type="Label" parent="Background/Timer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -62.0
margin_right = 60.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 3 )
text = "0 : 30"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mode" type="Label" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 100.0
margin_right = 100.0
margin_bottom = 135.0
rect_min_size = Vector2( 200, 0 )
custom_fonts/font = SubResource( 4 )
text = "Death Match"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Background/VBox/Players/VBox/Player1/UpButton" to="." method="_on_pressedUp" binds= [ 1 ]]
[connection signal="pressed" from="Background/VBox/Players/VBox/Player1/DownButton" to="." method="_on_pressedDown" binds= [ 1 ]]
[connection signal="pressed" from="Background/VBox/Players/VBox/Player2/UpButton" to="." method="_on_pressedUp" binds= [ 2 ]]
[connection signal="pressed" from="Background/VBox/Players/VBox/Player2/DownButton" to="." method="_on_pressedDown" binds= [ 2 ]]
[connection signal="pressed" from="Background/VBox/Players/VBox2/Player3/DownButton" to="." method="_on_pressedDown" binds= [ 3 ]]
[connection signal="pressed" from="Background/VBox/Players/VBox2/Player3/UpButton" to="." method="_on_pressedUp" binds= [ 3 ]]
[connection signal="pressed" from="Background/VBox/Players/VBox2/Player4/DownButton" to="." method="_on_pressedDown" binds= [ 4 ]]
[connection signal="pressed" from="Background/VBox/Players/VBox2/Player4/UpButton" to="." method="_on_pressedUp" binds= [ 4 ]]
[connection signal="pressed" from="Background/VBox/CastVoteButton" to="." method="_on_CastVoteButton_pressed"]
[connection signal="timeout" from="Background/Timer" to="." method="_on_Timer_timeout"]
